amperecpu: Support "PresenceGpio" option
ADCSensor daemon supports actiavate/deactivate the sensors which use
the CPU power domain. These behaviors is based on the installation
status of that CPU and "RequiredCPU" option in the sensors. ADCSensor
daemon uses Present property of the /system/chassis/motherboard/CPU_*
dbus interface to identify the CPU installation status. In Ampere
platforms, the ADC sensors with the prefix "S1_*" require the CPU2.
They should be hidden when CPU2 is absented.

In Ampere platforms, the GPIO interface is used to identify the CPU
installation status. In the CPU configuration, "PresenceGpio" option
will declare the GPIO pin and the logic of that pin which will be
applied when the CPU is installed.

This commit supports "PresenceGpio" in Ampere CPU daemon and update
the Present property of the /system/chassis/motherboard/CPU_* dbus
interface. This property is based on the status of the configured GPIO
pin.

Tested:
    1. Add PresenceGpio option in CPU2 configuration.
    2. The CPU_2 Present dbus property should be False when that CPU
       is not installed.
    3. The ADC sensors which require CPU2 should be hidden.

Signed-off-by: ThuBaNguyen <thu@os.amperecomputing.com>
Change-Id: I0fff02223003e84d15cac7bf519489aa2a6a226a

--- a/src/meson.build
+++ b/src/meson.build
@@ -176,6 +176,7 @@ if get_option('ampere-cpu').enabled()
         'AmpereCPU.cpp',
         'AmpereCPUMain.cpp',
         dependencies: [
+            gpiodcxx,
             sdbusplus,
         ],
         implicit_include_directories: false,
