Serialize cpusensor polling
Say we have 100 cpusensor objects, there will be 100 reads made
to peci driver. And in peci driver, if a read fails, it will keep
trying again till timeout. Timeout is 0.7 sec.

Which means, under peci error state, cpusensor daemon will
make 100 calls to peci driver. And each of that call will take 0.7 sec.

This ultimately result in io having a queue of 100 request at the same
time. And since we only has one thread for io (and peci can only do one read
at a time) these calls will make io nonresponsive.

As io is busy:
1) busctl tree or introspect to xyz.openbmc_project.CPUSensor will fail.
2) phosphor-pid-control will try to get data from cpusensor,
and after trying for 5 times, phosphor-pid-control will gracefully exit.

Fix for this is to serialize the requests made to peci from cpusensor daemon.
This is done via single poll loop for all cpu sensors using coroutine.
This basically avoid overloading the io with flooding of requests.

Also, the polling frequency of individual sensors are modified to small
delay between 2 sensor reads.

Tested:
Negative test case: In Intel system which has peci error.
By giving busctl tree or introspect to xyz.openbmc_project.CPUSensor
And making sure tree is populated.

Positive test case: In Intel system which does not have peci error.
By giving command ipmitool sensor list and making sure CPU sensors
in are showing values as expected.

Signed-off-by: Arun Lal K M <arun.lal@intel.com>
Signed-off-by: Arun P. Mohanan <arun.p.m@linux.intel.com>
Change-Id: Id435d198d6427e3141517ea517a8fa6f946c5dd5

--- a/meson.build
+++ b/meson.build
@@ -44,6 +44,11 @@ sdbusplus = dependency(
     ],
 )
 
+boost = dependency(
+    'boost',
+    modules: ['coroutine'],
+)
+
 phosphor_logging_dep = dependency(
     'phosphor-logging',
     fallback: ['phosphor-logging', 'phosphor_logging_dep'],
@@ -71,6 +76,7 @@ default_deps = [
     nlohmann_json,
     phosphor_logging_dep,
     sdbusplus,
+    boost,
 ]
 
 thresholds_a = static_library(
