Serialize sensor polling in cpusensor
Serialize sensor polling to fix nonresponsive cpusensor daemon on peci
timeout.
Say we have 100 cpusensor objects, there will be 100 reads made
to peci driver. And in peci driver, if a read fails, it will keep
trying again till timeout. Timeout is 0.7 sec. Which means, under peci
error state, cpusensor daemon will make 100 calls to peci driver.
And each of that call will take 0.7 sec. This ultimately result in
cpusensor io having a queue of 100 request at the same time.
And since we only has one thread for io (and peci can only do one read
at a time) these calls will make cpusensor nonresponsive.
As cpusensor is busy:
1) busctl tree or introspect to xyz.openbmc_project.CPUSensor will fail.
2) phosphor-pid-control will try to get data from cpusensor,
and after trying for 5 times, phosphor-pid-control will gracefully exit.

Fix for this is to serialize the requests made to peci from cpusensor daemon.
This is done via single poll loop for all cpu sensors using coroutine.
This basically avoid overloading the cpusensor io with flooding of requests.
Also, the polling frequency of individual sensors are modified to small
delay between 2 sensor reads.

Tested:
Negative test case: On Intel system which has peci error.
1. By giving busctl tree or introspect to xyz.openbmc_project.CPUSensor
and made sure busctl tree command is getting response.
2. phosphor-pid-control gracefull exit is not observed.

Positive test case: On Intel system which does not have peci error.
1. By giving command ipmitool sensor list and making sure CPU sensors
show values as expected.

Signed-off-by: Arun P. Mohanan <arun.p.m@linux.intel.com>
Signed-off-by: Arun Lal K M <arun.lal@intel.com>
Change-Id: Id435d198d6427e3141517ea517a8fa6f946c5dd5

--- a/meson.build
+++ b/meson.build
@@ -37,6 +37,11 @@ i2c = meson.get_compiler('cpp').find_library('i2c')
 sdbusplus = dependency('sdbusplus')
 phosphor_logging_dep = dependency('phosphor-logging')
 
+boost = dependency(
+    'boost',
+    modules: ['coroutine'],
+)
+
 if cpp.has_header('nlohmann/json.hpp')
     nlohmann_json = declare_dependency()
 else
@@ -53,6 +58,7 @@ default_deps = [
     nlohmann_json,
     phosphor_logging_dep,
     sdbusplus,
+    boost,
 ]
 
 thresholds_a = static_library(
