dbus-sensors/: Add support for PSU channels controlled by GPIO
In case a channel has a bridge circuit, we have to turn the bridge on
prior to reading a value at least for one scan cycle to get a valid
value. Add support for PSUSensor channels controlled by GPIO.

Signed-off-by: Mustafa Shehabi <mustafa.shehabi@fii-na.com>
Change-Id: I395cff1f92e9cd78116b3197b67cf53636b070a2

--- a/src/meson.build
+++ b/src/meson.build
@@ -171,6 +171,7 @@ if get_option('psu').enabled()
             pwmsensor_dep,
             thresholds_dep,
             utils_dep,
+            gpiodcxx,
         ],
         implicit_include_directories: false,
         include_directories: '../include',
