--- a/include/dbus-sensor_config.h.in
+++ b/include/dbus-sensor_config.h.in
@@ -3,7 +3,7 @@
 #include <cstdint>
 
 // clang-format off
-constexpr const bool validateUnsecureFeature = @VALIDATION_UNSECURE_FEATURE@;
+constexpr const int validateUnsecureFeature = @VALIDATION_UNSECURE_FEATURE@;
 
-constexpr const bool insecureSensorOverride = @INSECURE_UNRESTRICTED_SENSOR_OVERRIDE@;
+constexpr const int insecureSensorOverride = @INSECURE_UNRESTRICTED_SENSOR_OVERRIDE@;
 // clang-format on
